--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -1,5 +1,25 @@
 .text-field {
   background-color: aliceblue;
-  width:40%;
-  height: 80%;
+  width:100%;
+  height: 100px;
+  border-color: aquamarine;
+  border-width: 10px;
+  font-family: 'Noto Sans', sans-serif;
+  font-size: medium;
+}
+
+.button-span{
+  /* align-self: flex-end; */
+  /* align-items: flex-end;
+  justify-self: flex-end;
+  justify-items: flex-end; */
+  align-items: center;
+  display: flex;
+}
+
+.Button {
+  /* align-self: flex-end;
+  align-items: flex-end;
+  justify-self: flex-end;
+  justify-items: flex-end; */
 }
