--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -3,18 +3,15 @@
   width:100%;
   height: 100px;
   border-color: aquamarine;
-  border-width: 10px;
+  border-width: 3px;
+  border-radius: 18px;
   font-family: 'Noto Sans', sans-serif;
   font-size: medium;
 }
 
 .button-span{
-  /* align-self: flex-end; */
-  /* align-items: flex-end;
-  justify-self: flex-end;
-  justify-items: flex-end; */
-  align-items: center;
   display: flex;
+  justify-content: flex-end;
 }
 
 .Button {
