--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -1,3 +1,12 @@
+.form{
+  display: flex;
+  flex-direction: column;
+}
+
+.input-label{
+ margin-bottom: 5px;
+}
+
 .text-field {
   background-color: aliceblue;
   width:100%;
@@ -9,14 +18,23 @@
   font-size: medium;
 }
 
-.button-span{
+.button-div {
   display: flex;
   justify-content: flex-end;
 }
 
-.Button {
-  /* align-self: flex-end;
-  align-items: flex-end;
-  justify-self: flex-end;
-  justify-items: flex-end; */
+.button-submit {
+  margin-top: 18px;
+  font-family: 'Roboto',sans-serif;
+  font-weight: 3;
+  font-size: 15px;
+  color: #FFFFFF;
+  background-color: #4eb5f1;
+  text-align: center;
+  /* transition: all 0.2s; */
+  padding: 0.5em 1.8em;
+  /* margin: 0 0.3em 0.3em 0; */
+  border-radius: 2em;
+  box-sizing: border-box;
+  border-color:#4eb5f1;
 }
