--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -1,10 +1,45 @@
-.prompt-card {
-  background-color: aliceblue;
-  /* width:100%; */
-  /* height: 100px; */
-  /* border-color: aquamarine; */
-  border-width: 3px;
-  border-radius: 18px;
-  font-family: 'Noto Sans', sans-serif;
-  /* font-size: medium; */
+.response-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  width: 100%;
+}
+
+.bold{
+  font-size: large;
+}
+
+.card {
+  margin-top: 20px;
+  padding: 10px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
+  transition: all 0.2s;
+}
+
+.card:hover {
+  box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.4);
+  transform: scale(1.01);
+}
+
+.card-title {
+  font-weight: 400;
+  color: #ffffff;
+}
+
+.card-subtitle {
+  color: rgba(255, 255, 255, 0.9);
+}
+
+.card-1 {
+  background: radial-gradient(#1fe4f5, #3fbafe);
+}
+
+@media (max-width: 1600px) {
+  .cards {
+    justify-content: center;
+  }
 }
