--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -1,3 +1,7 @@
+.form-container {
+  width: 100%;
+}
+
 .form{
   display: flex;
   flex-direction: column;
@@ -8,10 +12,11 @@
 }
 
 .text-field {
-  background-color: aliceblue;
-  width:100%;
+  padding: 12px;
+  /* background-color: rgb(95, 164, 207); */
+  width:97.5%;
   height: 100px;
-  border-color: aquamarine;
+  border-color: #3fbafe;
   border-width: 3px;
   border-radius: 18px;
   font-family: 'Noto Sans', sans-serif;
