--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -18,6 +18,7 @@
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
   transition: all 0.2s;
+
 }
 
 .card:hover {
@@ -35,7 +36,8 @@
 }
 
 .card-1 {
-  background: radial-gradient(#1fe4f5, #3fbafe);
+  background: radial-gradient(#afc7d3, #44687b);
+
 }
 
 @media (max-width: 1600px) {
