--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -16,7 +16,7 @@
   /* background-color: rgb(95, 164, 207); */
   width:97.5%;
   height: 100px;
-  border-color: #3fbafe;
+  border-color: #44687b;
   border-width: 3px;
   border-radius: 18px;
   font-family: 'Noto Sans', sans-serif;
@@ -34,12 +34,12 @@
   font-weight: 3;
   font-size: 15px;
   color: #FFFFFF;
-  background-color: #4eb5f1;
+  background-color: #44687b;
   text-align: center;
   /* transition: all 0.2s; */
   padding: 0.5em 1.8em;
   /* margin: 0 0.3em 0.3em 0; */
   border-radius: 2em;
   box-sizing: border-box;
-  border-color:#4eb5f1;
+  border-color:#44687b;
 }
