--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -8,7 +8,7 @@
 
 .h2{
   align-self: flex-start;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .form-container {
