--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -19,18 +19,18 @@
   border-color: #44687b;
   border-width: 3px;
   border-radius: 18px;
-  font-family: 'Noto Sans', sans-serif;
+  font-family: 'Roboto Mono', sans-serif;
   font-size: medium;
 }
 
 .button-div {
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
 }
 
 .button-submit {
   margin-top: 18px;
-  font-family: 'Roboto',sans-serif;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 3;
   font-size: 15px;
   color: #FFFFFF;
@@ -42,4 +42,11 @@
   border-radius: 2em;
   box-sizing: border-box;
   border-color:#44687b;
+}
+
+.empty-list{
+  width: 105%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
