--- a/src/styles/Card.css
+++ b/src/styles/Card.css
@@ -5,7 +5,7 @@
   width: 100%;
 }
 
-.bold{
+.bold {
   font-size: large;
 }
 
@@ -18,7 +18,6 @@
   border-radius: 10px;
   box-shadow: 0px 6px 10px rgba(0, 0, 0, 0.25);
   transition: all 0.2s;
-
 }
 
 .card:hover {
@@ -28,16 +27,15 @@
 
 .card-title {
   font-weight: 400;
-  color: #ffffff;
+  color: black;
 }
 
 .card-subtitle {
-  color: rgba(255, 255, 255, 0.9);
+  color: black;
 }
 
 .card-1 {
-  background: radial-gradient(#44687b, #97afbb);
-
+  background: radial-gradient(#e0e0d3, #efeecb);
 }
 
 @media (max-width: 1600px) {
