--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -2,51 +2,76 @@
   width: 100%;
 }
 
-.form{
+.form {
   display: flex;
   flex-direction: column;
 }
 
-.input-label{
- margin-bottom: 5px;
+.input-label {
+  margin-bottom: 10px;
+}
+
+.css-jedpe8-MuiSelect-select-MuiInputBase-input-MuiOutlinedInput-input.MuiSelect-select {
+  background-color: #efeecb;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 3;
+}
+
+.MuiInputLabel-root
+  MuiInputLabel-formControl
+  MuiInputLabel-animated
+  MuiInputLabel-shrink
+  MuiInputLabel-sizeSmall
+  MuiInputLabel-outlined
+  MuiFormLabel-root
+  MuiFormLabel-colorPrimary
+  MuiFormLabel-filled
+  css-1sumxir-MuiFormLabel-root-MuiInputLabel-root {
+  background-color: #efeecb;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-weight: 3;
 }
 
 .text-field {
   padding: 12px;
-  /* background-color: rgb(95, 164, 207); */
-  width:97.5%;
+  width: 97.5%;
   height: 100px;
-  border-color: #44687b;
+  border-color: #efeecb;
   border-width: 3px;
   border-radius: 18px;
-  font-family: 'Roboto Mono', sans-serif;
+  font-family: "Roboto Mono", sans-serif;
   font-size: medium;
 }
 
 .button-div {
   display: flex;
   justify-content: space-between;
+  padding-left: 6px;
+  padding-right: 6px;
 }
 
 .button-submit {
   margin-top: 18px;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   font-weight: 3;
   font-size: 15px;
-  color: #FFFFFF;
-  background-color: #44687b;
+  color: black;
+  background-color: #efeecb;
   text-align: center;
-  /* transition: all 0.2s; */
   padding: 0.5em 1.8em;
-  /* margin: 0 0.3em 0.3em 0; */
   border-radius: 2em;
   box-sizing: border-box;
-  border-color:#44687b;
+  border-color: #efeecb;
+  cursor: pointer;
 }
 
-.empty-list{
-  width: 105%;
+.empty-list {
+  width: 101.5%;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  margin-bottom: 50px;
+}
+
+@media screen and (min-device-width: 1200px) and (max-device-width: 1600px) and (-webkit-min-device-pixel-ratio: 2) and (min-resolution: 192dpi) {
 }
